force-app/main/default/objects/KDCE_DormantContact__c/KDCE_DormantContact__c.object-meta.xml
<CustomObject>
    <description>고객 중 휴면으로 전환된 고객 정보를 저장하기 위한 오브젝트</description>
    <label>Dormant Contact</label>
    <nameField>
        <label>Dormant Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dormant Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>