force-app/main/default/objects/KDCE_DormantContact__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>