force-app/main/default/objects/KDCE_DormantContact__c/fields/CAA_ContactCreator__c.field-meta.xml
<CustomField>
    <fullName>CAA_ContactCreator__c</fullName>
    <label>Contact Creator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>