force-app/main/default/objects/KDCE_DormantContact__c/fields/CAA_DocumentId__c.field-meta.xml
<CustomField>
    <fullName>CAA_DocumentId__c</fullName>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>