force-app/main/default/objects/KDCE_DormantContact__c/fields/CAA_RequestDocumentTypeRefcode__c.field-meta.xml
<CustomField>
    <fullName>CAA_RequestDocumentTypeRefcode__c</fullName>
    <label>Request Document Type Refcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>