force-app/main/default/objects/KDCE_DormantContact__c/fields/CAA_Stage__c.field-meta.xml
<CustomField>
    <fullName>CAA_Stage__c</fullName>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>