force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_AVStatusDateChange__c.field-meta.xml
<CustomField>
    <fullName>CCR_AVStatusDateChange__c</fullName>
    <label>AV Status Date Change</label>
    <type>DateTime</type>
</CustomField>