force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_BlockedContact__c.field-meta.xml
<CustomField>
    <fullName>CCR_BlockedContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked Contact</label>
    <type>Checkbox</type>
</CustomField>