force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_BockingReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_BockingReason__c</fullName>
    <label>Blocking Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>