force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_ConsumerUID__c.field-meta.xml
<CustomField>
    <fullName>CCR_ConsumerUID__c</fullName>
    <label>Consumer DB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>