force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_CountryID__c.field-meta.xml
<CustomField>
    <fullName>CCR_CountryID__c</fullName>
    <label>Home Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>