force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_CountryPrefixNumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_CountryPrefixNumber__c</fullName>
    <description>Country code prefix of number (41 for CH for example)</description>
    <label>Country Prefix Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_CountryPrefixNumber</valueSetName>
    </valueSet>
</CustomField>