force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_Declared__c.field-meta.xml
<CustomField>
    <fullName>CCR_Declared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declared</label>
    <type>Checkbox</type>
</CustomField>