force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_FullMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_FullMobileNumber__c</fullName>
    <label>Full Mobile Number</label>
    <type>Phone</type>
</CustomField>