force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_FullName__c.field-meta.xml
<CustomField>
    <fullName>CCR_FullName__c</fullName>
    <label>Full Name</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>