force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_GlobalMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>CCR_GlobalMarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>