force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_InfluencerScore__c.field-meta.xml
<CustomField>
    <fullName>CCR_InfluencerScore__c</fullName>
    <label>Influencer Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>