force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_Locality__c.field-meta.xml
<CustomField>
    <fullName>CCR_Locality__c</fullName>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>