force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_NumberOfMessages__c.field-meta.xml
<CustomField>
    <fullName>CCR_NumberOfMessages__c</fullName>
    <label>Number Of Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>