force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_PhoneticFirstName__c.field-meta.xml
<CustomField>
    <fullName>CCR_PhoneticFirstName__c</fullName>
    <label>Phonetic First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>