force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_PostBox__c.field-meta.xml
<CustomField>
    <fullName>CCR_PostBox__c</fullName>
    <label>Post Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>