force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_Region__c.field-meta.xml
<CustomField>
    <fullName>CCR_Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>