force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_RegistrationConsumerID__c.field-meta.xml
<CustomField>
    <fullName>CCR_RegistrationConsumerID__c</fullName>
    <label>Referred by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>