force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SearchableDOB__c.field-meta.xml
<CustomField>
    <fullName>CCR_SearchableDOB__c</fullName>
    <label>Searchable DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>