force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_Smoker__c.field-meta.xml
<CustomField>
    <fullName>CCR_Smoker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoker Declaration</label>
    <type>Checkbox</type>
</CustomField>