force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SmokerDeclarationDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_SmokerDeclarationDate__c</fullName>
    <label>Smoker Declaration Date</label>
    <type>DateTime</type>
</CustomField>