force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SmokerNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_SmokerNew__c</fullName>
    <label>Smoker Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not declared</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>