force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SocialMediaNickname__c.field-meta.xml
<CustomField>
    <fullName>CCR_SocialMediaNickname__c</fullName>
    <label>Social Media Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>