force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SocialMediaSourceAppID__c.field-meta.xml
<CustomField>
    <fullName>CCR_SocialMediaSourceAppID__c</fullName>
    <label>Social Media Source App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>