force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SoftAgeVerified__c.field-meta.xml
<CustomField>
    <fullName>CCR_SoftAgeVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soft Age Verified</label>
    <type>Checkbox</type>
</CustomField>