force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SoftAgeVerifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_SoftAgeVerifiedDate__c</fullName>
    <label>Soft Age Verified Date</label>
    <type>DateTime</type>
</CustomField>