force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_SoftAgeVerifiedNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_SoftAgeVerifiedNew__c</fullName>
    <label>Soft Age Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not declared</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>