force-app/main/default/objects/KDCE_DormantContact__c/fields/CCR_WinnerContact__c.field-meta.xml
<CustomField>
    <fullName>CCR_WinnerContact__c</fullName>
    <label>Winner Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>