force-app/main/default/objects/KDCE_DormantContact__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dormant Contact</relationshipLabel>
    <relationshipName>Dormant_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>