force-app/main/default/objects/KDCE_DormantContact__c/fields/DTE_District__c.field-meta.xml
<CustomField>
    <fullName>DTE_District__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>