force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_BirthdateMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BirthdateMask__c</fullName>
    <label>Birthdate(Mask)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>