force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ContactSubType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ContactSubType__c</fullName>
    <label>Contact Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>