force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ConvertDormantDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ConvertDormantDate__c</fullName>
    <label>Dormant Date</label>
    <type>DateTime</type>
</CustomField>