force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_DCIssueCumulative__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DCIssueCumulative__c</fullName>
    <label>Device Coupon Issue Count (Cumulative)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>