force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_DropoutDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DropoutDate__c</fullName>
    <label>DropOut Date</label>
    <type>DateTime</type>
</CustomField>