force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_FirstAddressLv1__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstAddressLv1__c</fullName>
    <label>First Address Lv1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>