force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_FirstAddressPostal__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstAddressPostal__c</fullName>
    <label>First Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>