force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_FirstPurchaseChannel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstPurchaseChannel__c</fullName>
    <label>First Purchase Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>