force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_FirstPurchaseId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstPurchaseId__c</fullName>
    <description>First Purchase에 해당하는 Order/Offline Program/Coupon에 대한 레코드 Id를 저장</description>
    <label>First Purchase Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>