force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_HardAgeVerifiedDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HardAgeVerifiedDate__c</fullName>
    <label>Hard Age Verified Date</label>
    <type>DateTime</type>
</CustomField>