force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_IdentityReVerificationDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IdentityReVerificationDate__c</fullName>
    <label>Identity Verification Date</label>
    <type>DateTime</type>
</CustomField>