force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_InformationOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_InformationOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information Opt-in</label>
    <type>Checkbox</type>
</CustomField>