force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_IqosON__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IqosON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQOS ON</label>
    <type>Checkbox</type>
</CustomField>