force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_IsDormant__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsDormant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dormant Contact</label>
    <type>Checkbox</type>
</CustomField>