force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_IsDropout__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsDropout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DropOut Contact</label>
    <type>Checkbox</type>
</CustomField>