force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_IsRequestDropout__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsRequestDropout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DropOut Request</label>
    <type>Checkbox</type>
</CustomField>