force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_JoinedPMKChannel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_JoinedPMKChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joined PMK Kakao Channel</label>
    <type>Checkbox</type>
</CustomField>