force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_LASLAU__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LASLAU__c</fullName>
    <label>LAS LAU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LAS</fullName>
            </value>
            <value>
                <fullName>LAU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>