force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_LastCaseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCaseDate__c</fullName>
    <label>Last Case Date</label>
    <type>DateTime</type>
</CustomField>