force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_LastCloseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCloseDate__c</fullName>
    <label>Last Case Close Date</label>
    <type>DateTime</type>
</CustomField>