force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_LastCouponUsedDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCouponUsedDate__c</fullName>
    <label>Last Coupon Burnt Date</label>
    <type>DateTime</type>
</CustomField>