force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_LastKakaoSyncDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastKakaoSyncDate__c</fullName>
    <label>Last Kakao Sync Date</label>
    <type>DateTime</type>
</CustomField>