force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastLoginDate__c</fullName>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>