force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_MarketingOptInDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MarketingOptInDate__c</fullName>
    <label>Marketing Opt-In Change Date</label>
    <type>DateTime</type>
</CustomField>