force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_MobileOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MobileOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile (Channel Opt In)</label>
    <type>Checkbox</type>
</CustomField>