force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_NameEMKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NameEMKey__c</fullName>
    <label>Contact Key (Name, Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>