force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_NamePNBDKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NamePNBDKey__c</fullName>
    <label>Contact Key (Name, Phone Number, BD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>