force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_NamePNKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NamePNKey__c</fullName>
    <label>Contact Key (Name, Phone Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>