force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_PersonalInfoValidityPeriod__c.field-meta.xml
<CustomField>
    <fullName>KDCE_PersonalInfoValidityPeriod__c</fullName>
    <description>[KDCE] Personal Information Validity Period</description>
    <label>Personal Information Validity Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1y</fullName>
                <label>1년</label>
            </value>
            <value>
                <fullName>dropout</fullName>
                <label>탈퇴시까지</label>
            </value>
            <value>
                <fullName>3y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>