force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_PhoneMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_PhoneMask__c</fullName>
    <label>Phone(Mask)</label>
    <type>Phone</type>
</CustomField>