force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_PNKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_PNKey__c</fullName>
    <label>Contact Key (Phone Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>