force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ReactivateDormantDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ReactivateDormantDate__c</fullName>
    <label>Reactivate Dormant Date</label>
    <type>DateTime</type>
</CustomField>