force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_RegistrationChannel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RegistrationChannel__c</fullName>
    <label>Registration Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IQOS</fullName>
            </value>
            <value>
                <fullName>GetInfo</fullName>
            </value>
            <value>
                <fullName>EasyIqos</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>