force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RegistrationDate__c</fullName>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>