force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_RegistrationObject__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RegistrationObject__c</fullName>
    <description>Contact 별 중복규칙을 다르게 하기 위해 사용되는 필드 (Apex)</description>
    <label>Registration Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>