force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_RentalConsumer__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RentalConsumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Consumer</label>
    <type>Checkbox</type>
</CustomField>