force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_SecondAddressPostal__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SecondAddressPostal__c</fullName>
    <label>Second Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>