force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShippingCity__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>