force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShippingCountry__c</fullName>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>