force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShippingPostalCode__c</fullName>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>