force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_ShippingState__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShippingState__c</fullName>
    <label>Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>