force-app/main/default/objects/KDCE_DormantContact__c/fields/KDCE_Store__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>KDCE_Store__c</referenceTo>
    <relationshipLabel>Dormant Contact</relationshipLabel>
    <relationshipName>DormantContact</relationshipName>
    <type>Lookup</type>
</CustomField>