force-app/main/default/objects/KDCE_DormantContact__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <label>MailingAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>