force-app/main/default/objects/KDCE_DormantContact__c/fields/OtherCountry__c.field-meta.xml
<CustomField>
    <fullName>OtherCountry__c</fullName>
    <label>OtherCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>