force-app/main/default/objects/KDCE_DormantContact__c/fields/OtherPostalCode__c.field-meta.xml
<CustomField>
    <fullName>OtherPostalCode__c</fullName>
    <label>OtherPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>