force-app/main/default/objects/KDCE_DormantContact__c/fields/OtherState__c.field-meta.xml
<CustomField>
    <fullName>OtherState__c</fullName>
    <label>OtherState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>