force-app/main/default/objects/KDCE_DormantContact__c/fields/OtherStreet__c.field-meta.xml
<CustomField>
    <fullName>OtherStreet__c</fullName>
    <label>OtherStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>